--- a/user_docs/css/github.css
+++ b/user_docs/css/github.css
@@ -152,6 +152,7 @@ blockquote {
     margin-bottom: 0; }
 
 table {
+  border-collapse: collapse;
   padding: 0; }
   table tr {
     border-top: 1px solid #cccccc;
